--- a/2. Adding 2D Content to a WebGL Context/index.html
+++ b/2. Adding 2D Content to a WebGL Context/index.html
@@ -8,7 +8,7 @@
                 integrity="sha512-zhHQR0/H5SEBL3Wn6yYSaTTZej12z0hVZKOv3TwCUXT1z5qeqGcXJLLrbERYRScEDDpYIJhPC1fk31gqR783iQ=="
                 crossorigin="anonymous" defer>
         </script>
-        <script src="webgl-demo.js"></script>
+        <script src="webgl-demo.js" defer></script>
     </head>
 
     <body>
